--- a/Hangmen/MainWindow.xaml
+++ b/Hangmen/MainWindow.xaml
@@ -7,6 +7,18 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <UniformGrid Name="lettersGrid" Rows="2" FlowDirection="LeftToRight" 
+                     Grid.Row="0" Margin="300,160,50,20"/>
+        <UniformGrid Name ="wordGrid" Rows="1" FlowDirection="LeftToRight" 
+                     Grid.Row="0" Margin="300,20,50,190"/>
+
+        <Grid Grid.Row="1">
+            <Button Height="60" Width="80" Content="New Word" FontSize="15" Margin="350,0,0,0" Click="New_Word"/>
+        </Grid>
     </Grid>
 </Window>
