final game(no database)

--- a/Hangmen/MainWindow.xaml
+++ b/Hangmen/MainWindow.xaml
@@ -11,6 +11,7 @@
             <RowDefinition Height="2*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <Image Name="manImage" Grid.Row="0" Stretch="Fill" Width="150" Height="150" Margin="-450,0,0,0" Source="C:\Users\Alex\Downloads\Hangmen\Hangmen\images\0.jpg"/>
 
         <UniformGrid Name="lettersGrid" Rows="2" FlowDirection="LeftToRight" 
                      Grid.Row="0" Margin="300,160,50,20"/>
@@ -19,6 +20,10 @@
 
         <Grid Grid.Row="1">
             <Button Height="60" Width="80" Content="New Word" FontSize="15" Margin="350,0,0,0" Click="New_Word"/>
+            <Button Height="60" Width="80" Content="Solution" FontSize="15" Margin="600,0,0,0" Click="Show_Solution" />
+
+            <TextBox Name="guessedWordsCounter" Height="60" Width="200" Text="Guessed Words: 0"   FontSize="20" VerticalContentAlignment="Center"
+                     Margin="-100,0,0,0" IsReadOnly="True"/>
         </Grid>
     </Grid>
 </Window>
